# bmx280_spi

./: README.md  pyproject.toml
bmx280_spi/: __init__.py  __main__.py
