[project]
name = "bmx280_spi"
version = "1.0.2"
description = "Python module to use the SPI bus to read bmp280/bme280 sensors"
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["bmp280", "bme280", "spi"]
readme = "README.md"
requires-python =">=3.6"
classifiers = [
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers"
]
dependencies = [
    "logging_handler",
    "spidev",
    "gpiod"
]

[project.urls]
"Homepage" = "https://www.learningtopi.com/python-modules-applications/bmx280_spi/"
"Bug Tracker" = "https://github.com/LearningToPi/bmx280_spi/issues"
"Source Code" = "https://github.com/LearningToPi/bmx280_spi"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"